Add field expiry to DayType

--- a/src/main/webapp/app/entities/day-type/day-type-detail.component.html
+++ b/src/main/webapp/app/entities/day-type/day-type-detail.component.html
@@ -17,6 +17,10 @@
                 <dd>
                     <span>{{dayType.description}}</span>
                 </dd>
+                <dt><span jhiTranslate="smartjournalApp.dayType.expiry">Expiry</span></dt>
+                <dd>
+                    <span>{{dayType.expiry}}</span>
+                </dd>
                 <dt><span jhiTranslate="smartjournalApp.dayType.created">Created</span></dt>
                 <dd>
                     <span>{{dayType.created}}</span>
