--- a/src/main/webapp/app/admin/user-management/user-management-detail.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management-detail.component.html
@@ -24,12 +24,12 @@
                 <dd>{{user.langKey}}</dd>
                 <dt><span jhiTranslate="userManagement.createdBy">Created By</span></dt>
                 <dd>{{user.createdBy}}</dd>
-                <dt><span jhiTranslate="userManagement.createdDate">Created Date</span></dt>
-                <dd>{{user.createdDate | date:'dd/MM/yy HH:mm' }}</dd>
-                <dt><span jhiTranslate="userManagement.lastModifiedBy">Last Modified By</span></dt>
-                <dd>{{user.lastModifiedBy}}</dd>
-                <dt><span jhiTranslate="userManagement.lastModifiedDate">Last Modified Date</span></dt>
-                <dd>{{user.lastModifiedDate | date:'dd/MM/yy HH:mm'}}</dd>
+                <dt><span jhiTranslate="userManagement.created">Created</span></dt>
+                <dd>{{user.created | date:'dd/MM/yy HH:mm' }}</dd>
+                <dt><span jhiTranslate="userManagement.updatedBy">Updated By</span></dt>
+                <dd>{{user.updatedBy}}</dd>
+                <dt><span jhiTranslate="userManagement.updated">Updated</span></dt>
+                <dd>{{user.updated | date:'dd/MM/yy HH:mm'}}</dd>
                 <dt><span jhiTranslate="userManagement.profiles">Profiles</span></dt>
                 <dd>
                     <ul class="list-unstyled">
