fix bug with duplicate created/updated

--- a/src/main/webapp/app/entities/board/board-detail.component.html
+++ b/src/main/webapp/app/entities/board/board-detail.component.html
@@ -13,11 +13,11 @@
                 <dd>
                     <span>{{board.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.created">Created</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.board.createdDate">Created</span></dt>
                 <dd>
                     <span>{{board.created}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.updated">Updated</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.board.updatedDate">Updated</span></dt>
                 <dd>
                     <span>{{board.updated}}</span>
                 </dd>
