--- a/src/main/webapp/app/entities/board/board.component.html
+++ b/src/main/webapp/app/entities/board/board.component.html
@@ -17,8 +17,8 @@
             <th><span jhiTranslate="global.field.id">ID</span></th>
             <th><span jhiTranslate="smartjournalApp.board.name">Name</span></th>
             <th><span jhiTranslate="smartjournalApp.board.description">Description</span></th>
-            <th><span jhiTranslate="smartjournalApp.board.created">Created</span></th>
-            <th><span jhiTranslate="smartjournalApp.board.updated">Updated</span></th>
+            <th><span jhiTranslate="smartjournalApp.board.createdDate">Created</span></th>
+            <th><span jhiTranslate="smartjournalApp.board.updatedDate">Updated</span></th>
             <th><span jhiTranslate="smartjournalApp.board.party">Party</span></th>
             <th><span jhiTranslate="smartjournalApp.board.subject">Subject</span></th>
             <th></th>
