--- a/src/main/webapp/app/entities/day-type/day-type-detail.component.html
+++ b/src/main/webapp/app/entities/day-type/day-type-detail.component.html
@@ -21,11 +21,11 @@
                 <dd>
                     <span>{{dayType.expiry}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.dayType.created">Created</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.dayType.createdDate">Created</span></dt>
                 <dd>
                     <span>{{dayType.created}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.dayType.updated">Updated</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.dayType.updatedDate">Updated</span></dt>
                 <dd>
                     <span>{{dayType.updated}}</span>
                 </dd>
