--- a/src/main/webapp/app/entities/day-type/day-type.component.html
+++ b/src/main/webapp/app/entities/day-type/day-type.component.html
@@ -19,8 +19,8 @@
             <th><span jhiTranslate="smartjournalApp.dayType.score">Score</span></th>
             <th><span jhiTranslate="smartjournalApp.dayType.description">Description</span></th>
             <th><span jhiTranslate="smartjournalApp.dayType.expiry">Expiry</span></th>
-            <th><span jhiTranslate="smartjournalApp.dayType.created">Created</span></th>
-            <th><span jhiTranslate="smartjournalApp.dayType.updated">Updated</span></th>
+            <th><span jhiTranslate="smartjournalApp.dayType.createdDate">Created</span></th>
+            <th><span jhiTranslate="smartjournalApp.dayType.updatedDate">Updated</span></th>
             <th><span jhiTranslate="smartjournalApp.dayType.board">Board</span></th>
             <th></th>
             </tr>
