--- a/src/main/webapp/app/entities/party/party-detail.component.html
+++ b/src/main/webapp/app/entities/party/party-detail.component.html
@@ -13,11 +13,11 @@
                 <dd>
                     <span>{{party.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.party.created">Created</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.party.createdDate">Created</span></dt>
                 <dd>
                     <span>{{party.created}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.party.updated">Updated</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.party.updatedDate">Updated</span></dt>
                 <dd>
                     <span>{{party.updated}}</span>
                 </dd>
