--- a/src/main/webapp/app/entities/party/party.component.html
+++ b/src/main/webapp/app/entities/party/party.component.html
@@ -17,8 +17,8 @@
             <th><span jhiTranslate="global.field.id">ID</span></th>
             <th><span jhiTranslate="smartjournalApp.party.name">Name</span></th>
             <th><span jhiTranslate="smartjournalApp.party.description">Description</span></th>
-            <th><span jhiTranslate="smartjournalApp.party.created">Created</span></th>
-            <th><span jhiTranslate="smartjournalApp.party.updated">Updated</span></th>
+            <th><span jhiTranslate="smartjournalApp.party.createdDate">Created</span></th>
+            <th><span jhiTranslate="smartjournalApp.party.updatedDate">Updated</span></th>
             <th><span jhiTranslate="smartjournalApp.party.subject">Subject</span></th>
             <th></th>
             </tr>
