--- a/src/main/webapp/app/entities/subject/subject-detail.component.html
+++ b/src/main/webapp/app/entities/subject/subject-detail.component.html
@@ -13,11 +13,11 @@
                 <dd>
                     <span>{{subject.description}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.subject.created">Created</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.subject.createdDate">Created</span></dt>
                 <dd>
                     <span>{{subject.created}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.subject.updated">Updated</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.subject.updatedDate">Updated</span></dt>
                 <dd>
                     <span>{{subject.updated}}</span>
                 </dd>
