--- a/src/main/webapp/app/entities/subject/subject.component.html
+++ b/src/main/webapp/app/entities/subject/subject.component.html
@@ -17,8 +17,8 @@
             <th><span jhiTranslate="global.field.id">ID</span></th>
             <th><span jhiTranslate="smartjournalApp.subject.name">Name</span></th>
             <th><span jhiTranslate="smartjournalApp.subject.description">Description</span></th>
-            <th><span jhiTranslate="smartjournalApp.subject.created">Created</span></th>
-            <th><span jhiTranslate="smartjournalApp.subject.updated">Updated</span></th>
+            <th><span jhiTranslate="smartjournalApp.subject.createdDate">Created</span></th>
+            <th><span jhiTranslate="smartjournalApp.subject.updatedDate">Updated</span></th>
             <th></th>
             </tr>
             </thead>
