--- a/src/main/webapp/app/entities/day-type/day-type-update.component.html
+++ b/src/main/webapp/app/entities/day-type/day-type-update.component.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="smartjournalApp.dayType.created" for="field_created">Created</label>
+                    <label class="form-control-label" jhiTranslate="smartjournalApp.dayType.createdDate" for="field_created">Created</label>
                     <div class="d-flex">
                         <input id="field_created" type="datetime-local" class="form-control" name="created" [(ngModel)]="created"
                         required/>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="smartjournalApp.dayType.updated" for="field_updated">Updated</label>
+                    <label class="form-control-label" jhiTranslate="smartjournalApp.dayType.updatedDate" for="field_updated">Updated</label>
                     <div class="d-flex">
                         <input id="field_updated" type="datetime-local" class="form-control" name="updated" [(ngModel)]="updated"
                         required/>
