--- a/src/main/webapp/app/entities/party/party-update.component.html
+++ b/src/main/webapp/app/entities/party/party-update.component.html
@@ -26,7 +26,7 @@
                         [(ngModel)]="party.description" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="smartjournalApp.party.created" for="field_created">Created</label>
+                    <label class="form-control-label" jhiTranslate="smartjournalApp.party.createdDate" for="field_created">Created</label>
                     <div class="d-flex">
                         <input id="field_created" type="datetime-local" class="form-control" name="created" [(ngModel)]="created"
                         required/>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="smartjournalApp.party.updated" for="field_updated">Updated</label>
+                    <label class="form-control-label" jhiTranslate="smartjournalApp.party.updatedDate" for="field_updated">Updated</label>
                     <div class="d-flex">
                         <input id="field_updated" type="datetime-local" class="form-control" name="updated" [(ngModel)]="updated"
                         required/>
