--- a/src/main/webapp/app/entities/board/board-detail.component.html
+++ b/src/main/webapp/app/entities/board/board-detail.component.html
@@ -21,10 +21,10 @@
                 <dd>
                     <span>{{board.updated}}</span>
                 </dd>
-                <dt><span jhiTranslate="smartjournalApp.board.party">Party</span></dt>
+                <dt><span jhiTranslate="smartjournalApp.board.group">Party</span></dt>
                 <dd>
-                    <div *ngIf="board.party">
-                        <a [routerLink]="['/party', board.party?.id, 'view']">{{board.party?.id}}</a>
+                    <div *ngIf="board.group">
+                        <a [routerLink]="['/group', board.group?.id, 'view']">{{board.group?.id}}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="smartjournalApp.board.subject">Subject</span></dt>
