--- a/src/main/webapp/app/entities/party/party-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/party/party-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" (ngSubmit)="confirmDelete(party.id)">
+<form name="deleteForm" (ngSubmit)="confirmDelete(group.id)">
     <div class="modal-header">
         <h4 class="modal-title" jhiTranslate="entity.delete.title">Confirm delete operation</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -6,13 +6,13 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-party-heading" jhiTranslate="smartjournalApp.party.delete.question" translateValues="{id: '{{party.id}}'}">Are you sure you want to delete this Party?</p>
+        <p id="jhi-delete-group-heading" jhiTranslate="smartjournalApp.group.delete.question" translateValues="{id: '{{group.id}}'}">Are you sure you want to delete this Party?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
             <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
         </button>
-        <button id="jhi-confirm-delete-party" type="submit" class="btn btn-danger">
+        <button id="jhi-confirm-delete-group" type="submit" class="btn btn-danger">
             <fa-icon [icon]="'times'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.delete">Delete</span>
         </button>
     </div>
