--- a/src/main/webapp/app/entities/board/board-detail.component.html
+++ b/src/main/webapp/app/entities/board/board-detail.component.html
@@ -23,8 +23,8 @@
                 </dd>
                 <dt><span jhiTranslate="smartjournalApp.board.party">Party</span></dt>
                 <dd>
-                    <div *ngIf="board.party">
-                        <a [routerLink]="['/party', board.party?.id, 'view']">{{board.party?.id}}</a>
+                    <div *ngIf="board.group">
+                        <a [routerLink]="['/party', board.group?.id, 'view']">{{board.group?.id}}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="smartjournalApp.board.subject">Subject</span></dt>
