--- a/src/main/webapp/app/group/group.component.html
+++ b/src/main/webapp/app/group/group.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="smartjournalApp.group.home.title">Parties</span>
+        <span jhiTranslate="smartjournalApp.group.home.title">Groups</span>
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-group" [routerLink]="['/group/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="smartjournalApp.group.home.createLabel">
