--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -10,14 +10,14 @@
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br/>
+    <hr/>
     <div *ngIf="boards">
         <div *ngFor="let board of boards; let i = index; trackBy: trackId">
             <div *ngIf="i % 2 === 0" class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 p-3">
                     <jhi-board-child [board]="board"></jhi-board-child>
                 </div>
-                <div *ngIf="i !== boards.length - 1" class="col-lg-6">
+                <div class="col-lg-6 p-3" *ngIf="i !== boards.length - 1">
                     <jhi-board-child [board]="boards[i + 1]"></jhi-board-child>
                 </div>
             </div>
