--- a/src/main/webapp/app/group/group-child.component.html
+++ b/src/main/webapp/app/group/group-child.component.html
@@ -1,12 +1,14 @@
-<div class="card bg-light m-3 shadow">
+<div class="card bg-light shadow h-100">
+    <h5 class="card-header">{{group.name}}</h5>
     <div class="card-body">
-        <h5 class="card-title">{{group.name}}</h5>
         <p>
             <small>Created: {{group.created | date: 'medium'}}</small>
             <br/>
             <small *ngIf="group.updated">Updated: {{group.updated | date: 'medium'}}</small>
         </p>
         <p class="card-text">{{group.description}}</p>
+    </div>
+    <div class="card-footer">
         <button type="submit"
                 [routerLink]="['/group', group.id, 'view' ]"
                 class="btn btn-info">
