--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/board" (click)="collapseNavbar()">
                     <span>
                         <i class="fas fa-book"></i>
@@ -26,7 +26,7 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/subject" (click)="collapseNavbar()">
                     <span>
                         <i class="fas fa-university"></i>
@@ -34,7 +34,7 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/group" (click)="collapseNavbar()">
                     <span>
                         <i class="fas fa-users"></i>
